# Daffy-Editor

./: .gitignore  Cargo.toml  README.md
docs/: ARCHITECTURE.md  FORMAT.md  LEGAL.md  RESEARCH_LOG.md  TEST_PLAN.md  USER_GUIDE.md
docs/reverse-engineering/: README.md  compression-codec.md  dma-helper.md  dma-transfers.md  graphics-pipeline.md  graphics-table.md  level-format.md  rom-identity.md  tile-graphics.md
docs/reverse-engineering/reports/: README.md  (+14 more)
src/: app.rs  error.rs  lib.rs  main.rs
src/codecs/: experimental.rs  gfx_rle.rs  mod.rs
src/editor/: commands.rs  history.rs  mod.rs  selection.rs  tools.rs
src/gfx/: mod.rs  table.rs
src/level/: cell.rs  index.rs  loader.rs  mod.rs  scan.rs
src/model/: level.rs  mod.rs  project.rs  validation.rs
src/patch/: bps.rs  ips.rs  mod.rs
src/rendering/: mod.rs  tile_renderer.rs  viewport_model.rs
src/rom/: info.rs  loader.rs  mod.rs  reader.rs  version.rs  writer.rs
src/snes/: disasm.rs  lorom.rs  mod.rs  palette.rs  tiles.rs
src/ui/: dialogs.rs  menu.rs  mod.rs  panels.rs  viewport.rs
test-fixtures/synthetic_roms/: README.md
tests/: editor_command_tests.rs  lorom_tests.rs  patch_tests.rs  project_tests.rs  rom_tests.rs
tests/snapshots/: project_tests__project_schema_snapshot.snap
tools/: roundtrip.sh
tools/mesen/: README.md  dma_log.lua  dump_ppu.lua  gen_savestate_capture.py  roundtrip_decompressor.lua  run-headless.sh  trace_decompressor.lua  trace_entities.lua  trace_fields.lua  trace_gfx_dispatcher.lua  trace_gfx_loader.lua  trace_pal_loads.lua  trace_play.lua  trace_scene.lua
