[package]
name = "daffy-editor"
version = "0.1.0"
edition = "2021"
description = "Native desktop level editor / reverse-engineering workbench for the SNES game Daffy Duck: The Marvin Missions. Requires a user-supplied, legally obtained ROM."
license = "MIT"

[lib]
name = "daffy_editor"
path = "src/lib.rs"

[[bin]]
name = "daffy-editor"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", features = ["persistence"] }
egui = "0.29"
egui_extras = "0.29"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
crc32fast = "1"
sha1_smol = { version = "1", features = ["std"] }

[dev-dependencies]
tempfile = "3"
insta = { version = "1", features = ["json"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
